# logiclance_fpga

./: .fpga_tool_state.json  .gitignore  README.md  USER_MANUAL.md  USER_REFERENCE.md  _vivado_config.tcl  fpga_config.tcl  pyproject.toml  requirements.txt  run_fpga  run_fpga_gui.py  setup.py  setup.sh  test_qt.py  test_rich.py
configs/packs/: example_pack.json
fpga_project/: fpga_project.xpr
fpga_project/fpga_project.cache/sim/: ssm.db
fpga_project/fpga_project.cache/wt/: synthesis.wdf  webtalk_pa.xml
fpga_project/fpga_project.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
fpga_project/fpga_project.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  adder.tcl  adder.vdi  adder_bus_skew_routed.rpt  adder_bus_skew_routed.rpx  adder_drc_routed.rpt  adder_drc_routed.rpx  adder_io_placed.rpt  adder_methodology_drc_routed.rpx  adder_opt.dcp  adder_physopt.dcp  (+16 more)
fpga_project1/: fpga_project.xpr
fpga_tool/: __init__.py  flow_utils.py  fpga_parser.py  run_fpga_xilinx.py  tcl_gen.py
fpga_tool/intelligence/: __init__.py  design_model.py  diagnostics.py  history.py  knowledge.py  optimizer.py  planner.py  plugins.py  watcher.py
original/: Test_proj.tcl  cmod_sim.tcl  cmod_sim_mult.tcl  sim1.tcl
output/fpga_20260612_131700/: _vivado_config.tcl
output/fpga_20260612_131819/: _vivado_config.tcl
sample_testcase/: README.md  fpga_project.xpr
sample_testcase/c_model/: Makefile  adder_model  main.c
sample_testcase/rtl/: adder.v
sample_testcase/sim/: tb_adder.v
tcl/: cmod_sim.tcl  full_flow.tcl  regression.tcl  sim_single.tcl
tcl/lib/: utils.tcl
(+148 files in other folders)
